--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div>
 <ol>
-    <li><a href="./sphere-engine.html">Sphere (IDE & Compilter)</a></li>
-    <li><a href="./ace-editor.html">Ace (IDE only, need calling to an Compiler Engine)</a></li>
+    <li><a href="./sphere-engine.html">Sphere (Editor & Compilter)</a></li>
+    <li><a href="./ace-editor.html">Ace (Editor only, need calling to an Compiler Engine)</a></li>
 </ol>
 </div>
 </body>
